Add a friend functionality
