# src/main/java/com/mserapinas/boardgame/userservice/dto/response/FriendRequestListDto.java
@@ -1,0 +1,9 @@
+package com.mserapinas.boardgame.userservice.dto.response;
+
+import java.util.List;
+
+public record FriendRequestListDto(
+    List<FriendRequestDto> requests,
+    Long totalCount
+) {
+}
